New labs for different modules and labs

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-04T08:59:39.429729Z",
-     "start_time": "2019-06-04T08:59:38.867730Z"
+     "end_time": "2019-06-04T14:05:12.246193Z",
+     "start_time": "2019-06-04T14:05:11.947399Z"
     }
    },
    "outputs": [
@@ -14,6 +14,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "{\n",
       "  \"shell_port\": 64525,\n",
       "  \"iopub_port\": 64526,\n",
@@ -34,14 +36,7 @@
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n",
-      "Pretty printing has been turned OFF\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "11:59:39 DEBUG:Loaded backend module://ipykernel.pylab.backend_inline version unknown.\n"
+      "Pretty printing has been turned ON\n"
      ]
     }
    ],
